# onecompress

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  flutter_rust_bridge.yaml  pubspec.yaml  run.sh
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
ios/Flutter/: Release.xcconfig  Rust.xcconfig
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart  objectbox-model.json  objectbox.g.dart
lib/app/: app.dart
lib/core/database/: objectbox_service.dart
lib/core/errors/: app_failure.dart
lib/core/extensions/: iterable_extensions.dart
lib/core/theme/: app_colors.dart  app_spacing.dart  app_theme.dart  app_typography.dart
lib/core/utils/: app_log.dart  byte_formatter.dart  formatters.dart  percentage_formatter.dart
lib/core/widgets/: action_tile.dart  glass_card.dart  section_card.dart
lib/features/history/application/: history_dependencies.dart
lib/features/history/data/datasources/: local_database_data_source.dart
lib/features/history/data/models/: compression_history_mapper.dart  compression_history_model.dart
lib/features/history/data/repositories/: compression_history_repository_impl.dart
lib/features/history/domain/entities/: compression_history_item.dart  compression_history_item.freezed.dart
lib/features/history/domain/repositories/: i_compression_history_repository.dart
lib/features/image_compression/application/: image_compression_dependencies.dart
lib/features/image_compression/data/datasources/: file_picker_data_source.dart  image_engine_data_source.dart  image_engine_data_source_factory.dart  image_engine_data_source_factory_io.dart  image_engine_data_source_factory_stub.dart  native_image_engine_bridge.dart  (+5 more)
lib/src/rust/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
lib/src/rust/api/: image_engine.dart  image_engine.freezed.dart
linux/: CMakeLists.txt
linux/runner/: my_application.cc
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig  Debug.xcconfig  Release.xcconfig  Rust.xcconfig
rust/image_engine/: Cargo.toml
rust/image_engine/src/: frb_generated.rs  lib.rs
rust/image_engine/src/api/: image_engine.rs
test/features/image_compression/: compression_telemetry_test.dart  image_compression_page_test.dart
tool/: build_rust_android.sh  build_rust_apple.sh
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
windows/runner/: Runner.rc  main.cpp
(+50 files in other folders)
