[package]
name = "image_engine"
version = "0.1.0"
edition = "2024"

[lib]
name = "image_engine"
crate-type = ["rlib", "cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.12.0"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp"] }
rayon = "1.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
