[package]
name = "image_engine"
version = "0.1.0"
edition = "2024"

[lib]
name = "image_engine"
crate-type = ["rlib", "cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.12.0"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp"] }
rayon = "1.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
num_cpus = "1.16"
# Structured logging — log is the facade, android_logger routes to logcat on Android
log = "0.4"
android_logger = "0.14"

[profile.release]
opt-level = 3
lto = "fat"          # Full LTO: allows cross-crate inlining & vectorization
codegen-units = 1    # Single codegen unit for maximum optimization
panic = "abort"      # No unwinding, smaller binary
strip = true
# SIMD for the codec hot-paths
[profile.release.package."*"]
opt-level = 3
